--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
         <span class="badge">Décos murales 3D</span>
       </div>
       <div class="actions">
-        <a id="vintedBtn" class="btn" target="_blank" rel="noopener" href="https://www.vinted.fr/member/xxxxxxx">
-          <!-- replace the URL above with your Vinted shop/profile -->
+        <a id="vintedBtn" class="btn" target="_blank" rel="noopener" href="https://www.vinted.fr/member/175869940">
           <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 12h16"/><path d="M12 4v16"/></svg>
           <span>Vinted</span>
         </a>
