--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
     const DESIGNS = [
       {
         id: "deco-001",
-        title: "Étoile nordique",
-        category: "Géométrie",
-        dimensions: "30 × 30 cm",
-        thumb: "assets/deco-001.png",
-        usdzUrl: "ar/deco-001.usdz",
-        glbUrl: "ar/deco-001.glb"
+        title: "Toilette",
+        category: "Linea",
+        dimensions: "7cm x 10cm",
+        thumb: "assets/images/png/laLineaToilette.png",
+        usdzUrl: "assets/ar/usdz/laLineaToilette.usdz",
+        glbUrl: "assets/ar/glb/laLineaToilette.glb"
       },
       {
         id: "deco-002",
