--- a/index.html
+++ b/index.html
@@ -3,151 +3,183 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#f4f4f5" />
-  <title>Galerie AR — Décos murales</title>
+  <title>Galerie AR — Test</title>
   <style>
-    :root{
-      --bg:#f7f7f8; /* gris blanc */
-      --fg:#0f172a; /* encre */
-      --muted:#6b7280;
-      --card:#ffffff;
-      --accent:#111827;
-      --accent-2:#e5e7eb;
-      --ring: 0 0 0 2px rgba(0,0,0,.06);
-      --radius: 18px;
-      --shadow: 0 10px 25px rgba(0,0,0,.08);
+    :root {
+      --bg: #f9fafb;
+      --fg: #111827;
+      --muted: #6b7280;
+      --card: #fff;
+      --radius: 16px;
+      --shadow: 0 4px 16px rgba(0,0,0,0.08);
+      --accent: #2563eb;
     }
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0;
-      font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji";
-      color:var(--fg);
-      background: radial-gradient(1200px 800px at 20% -10%, #ffffff 0, var(--bg) 60%), linear-gradient(#fff, var(--bg));
+
+    * { box-sizing: border-box; }
+    body {
+      margin: 0;
+      font-family: system-ui, sans-serif;
+      background: var(--bg);
+      color: var(--fg);
+      -webkit-font-smoothing: antialiased;
     }
-    a{color:inherit;text-decoration:none}
-    .container{max-width:1200px;margin:0 auto;padding:16px}
 
-    /* Header */
-    .topbar{
-      position:sticky;top:0;z-index:50;
-      backdrop-filter: blur(10px);
-      background: rgba(255,255,255,.7);
-      border-bottom:1px solid var(--accent-2);
+    header {
+      position: sticky;
+      top: 0;
+      background: #fff;
+      border-bottom: 1px solid #e5e7eb;
+      padding: 12px 16px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      z-index: 20;
     }
-    .topbar-inner{display:flex;align-items:center;gap:12px;justify-content:space-between;padding:12px 16px}
-    .brand{display:flex;align-items:center;gap:10px;font-weight:700;letter-spacing:.2px}
-    .badge{font-size:12px;color:#374151;background:#e5e7eb;border-radius:999px;padding:4px 8px}
-    .actions{display:flex;gap:8px}
-    .btn{display:inline-flex;align-items:center;gap:8px;border:1px solid var(--accent-2);background:#fff;padding:10px 14px;border-radius:14px;box-shadow:var(--shadow);cursor:pointer;transition:transform .08s ease}
-    .btn:hover{transform:translateY(-1px)}
-    .btn:active{transform:translateY(0)}
+    header .brand { font-weight: 700; font-size: 18px; }
 
-    /* Filters (optional placeholder hidden by default) */
-    .filters{display:none}
+    .btn {
+      background: var(--accent);
+      color: #fff;
+      border: none;
+      border-radius: var(--radius);
+      padding: 10px 16px;
+      font-size: 15px;
+      cursor: pointer;
+      box-shadow: var(--shadow);
+    }
+    .btn:active { transform: scale(0.97); }
 
-    /* Grid */
-    .grid{display:grid;grid-template-columns:repeat(2,1fr);gap:14px;margin:18px 0}
-    @media(min-width:640px){.grid{grid-template-columns:repeat(3,1fr)}}
-    @media(min-width:1024px){.grid{grid-template-columns:repeat(4,1fr)}}
+    main {
+      padding: 16px;
+      max-width: 1000px;
+      margin: auto;
+    }
 
-    /* Card */
-    .card{list-style:none;background:var(--card);border-radius:var(--radius);box-shadow:var(--shadow);overflow:hidden;position:relative;transform-style:preserve-3d;will-change:transform;transition:transform .15s ease, box-shadow .2s ease}
-    .card::after{content:"";position:absolute;inset:0;background:radial-gradient(400px 200px at 80% -20%, rgba(0,0,0,.06), transparent 60%);pointer-events:none}
-    .card:hover{box-shadow:0 15px 35px rgba(0,0,0,.12)}
-    .tilt{position:relative;aspect-ratio:1/1;background:linear-gradient(135deg, #fafafa, #ececec);display:grid;place-items:center}
-    .thumb{max-width:82%;max-height:82%;object-fit:contain;filter:drop-shadow(0 10px 12px rgba(0,0,0,.15))}
-    .meta{padding:10px 12px 12px}
-    .title{font-weight:600}
-    .sub{font-size:12px;color:var(--muted);margin-top:2px}
-    .ar-badge{position:absolute;top:10px;left:10px;background:#111827;color:#fff;font-size:11px;padding:6px 8px;border-radius:999px;display:inline-flex;align-items:center;gap:6px;box-shadow:var(--shadow)}
+    .grid {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 14px;
+    }
+    @media (min-width: 640px) {
+      .grid { grid-template-columns: repeat(3, 1fr); }
+    }
 
-    /* Toast */
-    .toast{position:fixed;left:50%;bottom:24px;transform:translateX(-50%);background:#111827;color:#fff;padding:10px 14px;border-radius:12px;box-shadow:var(--shadow);opacity:0;pointer-events:none;transition:opacity .2s ease}
-    .toast.show{opacity:1}
+    .card {
+      background: var(--card);
+      border-radius: var(--radius);
+      box-shadow: var(--shadow);
+      overflow: hidden;
+      cursor: pointer;
+      display: flex;
+      flex-direction: column;
+      transition: transform .15s ease;
+    }
+    .card:hover { transform: translateY(-2px); }
 
-    /* Footer */
-    footer{padding:40px 16px;color:#6b7280;text-align:center}
+    .thumb {
+      aspect-ratio: 1 / 1;
+      object-fit: contain;
+      width: 100%;
+      background: #f3f4f6;
+    }
 
-    /* Accessibility: reduce motion resets tilt */
-    @media (prefers-reduced-motion: reduce){
-      .card{transition:none !important; transform:none !important}
+    .meta {
+      padding: 10px 12px;
+    }
+    .title {
+      font-weight: 600;
+      font-size: 15px;
+    }
+    .sub {
+      font-size: 13px;
+      color: var(--muted);
+    }
+
+    .ar-badge {
+      position: absolute;
+      top: 8px;
+      left: 8px;
+      background: var(--accent);
+      color: #fff;
+      font-size: 11px;
+      padding: 4px 8px;
+      border-radius: 999px;
+    }
+
+    .toast {
+      position: fixed;
+      left: 50%;
+      bottom: 20px;
+      transform: translateX(-50%);
+      background: #111827;
+      color: #fff;
+      padding: 8px 14px;
+      border-radius: 10px;
+      opacity: 0;
+      transition: opacity .2s ease;
+      font-size: 14px;
+    }
+    .toast.show { opacity: 1; }
+
+    footer {
+      text-align: center;
+      padding: 30px 12px;
+      color: var(--muted);
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
-  <header class="topbar">
-    <div class="topbar-inner container">
-      <div class="brand">
-        <svg width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"><path d="M12 2l9 5v10l-9 5-9-5V7l9-5z" fill="#111827"/><path d="M12 4.2L5 8v8l7 3.8 7-3.8V8l-7-3.8z" fill="#fff"/></svg>
-        <span>Galerie AR</span>
-        <span class="badge">Décos murales 3D</span>
-      </div>
-      <div class="actions">
-        <a id="vintedBtn" class="btn" target="_blank" rel="noopener" href="https://www.vinted.fr/member/175869940">
-          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 12h16"/><path d="M12 4v16"/></svg>
-          <span>Vinted</span>
-        </a>
-        <button id="shareBtn" class="btn" type="button">
-          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 12v7a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-7"/><path d="M16 6l-4-4-4 4"/><path d="M12 2v14"/></svg>
-          <span>Partager</span>
-        </button>
-      </div>
-    </div>
+  <header>
+    <div class="brand">Galerie AR</div>
+    <button id="shareBtn" class="btn">Partager</button>
   </header>
 
-  <main class="container">
-    <ul id="grid" class="grid" aria-live="polite"></ul>
+  <main>
+    <ul id="grid" class="grid"></ul>
   </main>
 
-  <div id="toast" class="toast" role="status" aria-live="polite"></div>
+  <div id="toast" class="toast"></div>
 
   <footer>
-    <div class="container">© <span id="year"></span> — Galerie AR. Hébergé sur GitHub Pages.</div>
+    © <span id="year"></span> — Galerie AR. Test models inclus.
   </footer>
 
   <script>
-    // ============================
-    // 1) Définir vos designs ici
-    // Remplacez les URLs par vos propres fichiers (HTTPS recommandé)
-    // miniatures (PNG/SVG), fichier AR iOS (.usdz), fichier AR Android (.glb)
-    // ============================
+    // =============== MODELES DE TEST =================
     const DESIGNS = [
       {
-        id: "deco-001",
-        title: "Toilette",
-        category: "Linea",
-        dimensions: "7cm x 10cm",
-        thumb: "assets/images/png/laLineaToilette.png",
-        usdzUrl: "assets/ar/usdz/laLineaToilette.usdz",
-        glbUrl: "assets/ar/glb/laLineaToilette.glb"
+        id: "test-001",
+        title: "Cube",
+        category: "Base",
+        dimensions: "10 × 10 × 10 cm",
+        thumb: "https://via.placeholder.com/400x400.png?text=Cube",
+        usdzUrl: "https://modelviewer.dev/shared-assets/models/Astronaut.usdz",
+        glbUrl: "https://modelviewer.dev/shared-assets/models/Astronaut.glb"
       },
       {
-        id: "deco-002",
-        title: "Feuille Monstera",
-        category: "Nature",
-        dimensions: "40 × 28 cm",
-        thumb: "assets/deco-002.png",
-        usdzUrl: "ar/deco-002.usdz",
-        glbUrl: "ar/deco-002.glb"
+        id: "test-002",
+        title: "Vase",
+        category: "Base",
+        dimensions: "25 cm",
+        thumb: "https://via.placeholder.com/400x400.png?text=Vase",
+        usdzUrl: "https://storage.googleapis.com/ar-answers-in-search-models/static/Tiger.usdz",
+        glbUrl: "https://storage.googleapis.com/ar-answers-in-search-models/static/Tiger.glb"
       },
       {
-        id: "deco-003",
-        title: "Vague Japon",
-        category: "Art",
-        dimensions: "50 × 20 cm",
-        thumb: "assets/deco-003.png",
-        usdzUrl: "ar/deco-003.usdz",
-        glbUrl: "ar/deco-003.glb"
+        id: "test-003",
+        title: "Chaise",
+        category: "Base",
+        dimensions: "40 × 40 × 80 cm",
+        thumb: "https://via.placeholder.com/400x400.png?text=Chaise",
+        usdzUrl: "https://storage.googleapis.com/ar-answers-in-search-models/static/Chair.usdz",
+        glbUrl: "https://storage.googleapis.com/ar-answers-in-search-models/static/Chair.glb"
       },
-      // Ajoutez autant d'entrées que nécessaire
     ];
 
-    // ============================
-    // 2) Helpers
-    // ============================
+    // Helpers
     const isIOS = () => /iPhone|iPad|iPod/i.test(navigator.userAgent) ||
-      (navigator.platform === 'MacIntel' && navigator.maxTouchPoints > 1); // iPadOS
+      (navigator.platform === 'MacIntel' && navigator.maxTouchPoints > 1);
     const isAndroid = () => /Android/i.test(navigator.userAgent);
 
     function showToast(msg){
@@ -158,72 +190,40 @@
       showToast._t = setTimeout(()=> el.classList.remove('show'), 2200);
     }
 
-    // Open AR file depending on platform
+    // Ouverture AR
     function openARForItem(item){
-      // Require user gesture — call from click/tap only
       if (isIOS()){
-        // iOS Quick Look — needs an <a rel="ar" href="*.usdz"> dans le DOM
         const a = document.createElement('a');
         a.setAttribute('rel', 'ar');
         a.setAttribute('href', item.usdzUrl);
-        // Optionnel: fallback poster
-        const img = document.createElement('img');
-        img.src = item.thumb; img.alt = item.title; img.style.display = 'none';
-        a.appendChild(img);
         document.body.appendChild(a);
         a.click();
-        // Clean up après un court délai
         setTimeout(()=> a.remove(), 1000);
       } else if (isAndroid()){
-        // Scene Viewer (Android)
         const src = new URL(item.glbUrl, window.location.href).toString();
-        const linkBack = window.location.href;
-        const sceneViewerUrl = `https://arvr.google.com/scene-viewer/1.0?file=${encodeURIComponent(src)}&mode=ar_only&link=${encodeURIComponent(linkBack)}`;
-        // Redirection directe
+        const sceneViewerUrl =
+          `https://arvr.google.com/scene-viewer/1.0?file=${encodeURIComponent(src)}&mode=ar_only&link=${encodeURIComponent(window.location.href)}`;
         window.location.href = sceneViewerUrl;
-        // En cas d'échec (navigateurs non compatibles), on tente de télécharger le .glb
-        setTimeout(()=>{
-          // si l'utilisateur est toujours sur la page après 1.5s, proposer le téléchargement
-          if (document.visibilityState === 'visible'){
-            const a = document.createElement('a');
-            a.href = item.glbUrl; a.download = '';
-            document.body.appendChild(a); a.click(); a.remove();
-          }
-        }, 1500);
       } else {
         showToast('Ouvre ce lien depuis un smartphone pour la RA.');
       }
     }
 
-    // ============================
-    // 3) Rendu de la grille
-    // ============================
+    // Rendu
     const grid = document.getElementById('grid');
-
     DESIGNS.forEach(item => {
       const li = document.createElement('li');
       li.className = 'card';
-      li.setAttribute('tabindex', '0');
+      li.tabIndex = 0;
       li.setAttribute('role', 'button');
       li.setAttribute('aria-label', `${item.title}, ${item.category}, ${item.dimensions}. Ouvrir en réalité augmentée`);
 
-      // Badge AR
-      const badge = document.createElement('span');
-      badge.className = 'ar-badge';
-      badge.innerHTML = '<svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2l8.5 4.9v9.8L12 22 3.5 16.7V6.9L12 2z"/><path d="M12 22V12l8.5-5.1"/><path d="M12 12L3.5 6.9"/></svg> RA';
-      li.appendChild(badge);
-
-      // Zone tilt + image
-      const tilt = document.createElement('div');
-      tilt.className = 'tilt';
       const img = document.createElement('img');
       img.className = 'thumb';
-      img.loading = 'lazy';
-      img.alt = item.title;
       img.src = item.thumb;
-      tilt.appendChild(img);
+      img.alt = item.title;
+      img.loading = "lazy";
 
-      // Meta
       const meta = document.createElement('div');
       meta.className = 'meta';
       const title = document.createElement('div');
@@ -232,68 +232,30 @@
       const sub = document.createElement('div');
       sub.className = 'sub';
       sub.textContent = `${item.category} • ${item.dimensions}`;
-      meta.appendChild(title); meta.appendChild(sub);
+      meta.appendChild(title);
+      meta.appendChild(sub);
 
-      li.appendChild(tilt); li.appendChild(meta);
+      li.appendChild(img);
+      li.appendChild(meta);
 
-      // Click & keyboard
-      li.addEventListener('click', () => openARForItem(item));
-      li.addEventListener('keydown', (e) => { if (e.key === 'Enter' || e.key === ' ') { e.preventDefault(); openARForItem(item); }});
-
-      // Tilt effect (mouse + touch)
-      const maxTilt = 10; // degrés
-      let pointerDown = false;
-      function setTilt(xRatio, yRatio){
-        const rx = (yRatio - .5) * -2 * maxTilt; // haut/bas => rotateX inverse
-        const ry = (xRatio - .5) * 2 * maxTilt;
-        li.style.transform = `perspective(800px) rotateX(${rx.toFixed(2)}deg) rotateY(${ry.toFixed(2)}deg)`;
-      }
-      function resetTilt(){ li.style.transform = 'perspective(800px) rotateX(0deg) rotateY(0deg)'; }
-
-      li.addEventListener('pointerenter', ()=> pointerDown=false);
-      li.addEventListener('pointermove', (e)=>{
-        const r = li.getBoundingClientRect();
-        const x = (e.clientX - r.left) / r.width;
-        const y = (e.clientY - r.top) / r.height;
-        setTilt(x,y);
-      });
-      li.addEventListener('pointerleave', resetTilt);
-
-      // Touch: petite inclinaison suivant le doigt
-      li.addEventListener('touchstart', ()=> { pointerDown = true; }, {passive:true});
-      li.addEventListener('touchmove', (e)=>{
-        if(!pointerDown) return;
-        const t = e.touches[0];
-        const r = li.getBoundingClientRect();
-        const x = (t.clientX - r.left) / r.width;
-        const y = (t.clientY - r.top) / r.height;
-        setTilt(x,y);
-      }, {passive:true});
-      li.addEventListener('touchend', ()=> { pointerDown = false; resetTilt(); }, {passive:true});
+      li.addEventListener('click', ()=> openARForItem(item));
+      li.addEventListener('keydown', (e)=> { if (e.key === 'Enter' || e.key === ' ') openARForItem(item); });
 
       grid.appendChild(li);
     });
 
-    // ============================
-    // 4) Partage
-    // ============================
-    const shareBtn = document.getElementById('shareBtn');
-    shareBtn.addEventListener('click', async () => {
+    // Partage
+    document.getElementById('shareBtn').addEventListener('click', async ()=>{
       const url = window.location.href;
-      const data = { title: document.title, text: 'Découvre mes décos murales en RA', url };
+      const data = { title: document.title, text: 'Découvre mes tests AR', url };
       if (navigator.share){
-        try{ await navigator.share(data); } catch(err){ /* annulé */ }
+        try { await navigator.share(data); } catch {}
       } else if (navigator.clipboard){
-        try{ await navigator.clipboard.writeText(url); showToast('Lien copié ✅'); } catch { showToast('Impossible de copier'); }
-      } else {
-        // fallback input
-        const i = document.createElement('input'); i.value = url; document.body.appendChild(i); i.select(); document.execCommand('copy'); i.remove(); showToast('Lien copié ✅');
+        try { await navigator.clipboard.writeText(url); showToast("Lien copié ✅"); } catch {}
       }
     });
 
-    // ============================
-    // 5) Year
-    // ============================
+    // Footer year
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
 </body>
